--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,7 +60,7 @@
 
             </div>
         </section>
-        <section class="choice" id="bottom">
+        <section class="choice" >
             <div class="row">
                 <div class="col s12 l6" id="musicChoice">
                     <section class="center-align">
@@ -81,7 +81,7 @@
                             <p>I need help finding new talent</p>
                             <p>I need to advertise gigs for my venue</p>
 
-                            <a href="/signup/company/" class="logBtn hireBtn">Sign Up</a>
+                            <a id="bottom" href="/signup/company/" class="logBtn hireBtn">Sign Up</a>
 
                         </div>
                     </section>
