--- a/src/main/resources/templates/updateGig.html
+++ b/src/main/resources/templates/updateGig.html
@@ -107,7 +107,7 @@
                         </div>
                     </div>
 
-                    <button class="waves-effect waves-light btn" type="submit" >Create Gig</button>
+                    <button class="waves-effect waves-light btn" type="submit" >Update</button>
                 </form>
 
             </div>
